workspaces/DC Dev/DC Dev/src/objects/Employee_4__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Holds the address of the employee.</description>
        <inlineHelpText>Enter the address of the employee.</inlineHelpText>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Calculates the age of the employee automatically.</description>
        <formula>YEAR(Today())  -  YEAR(Date_of_Birth__c)</formula>
        <inlineHelpText>Calculates the age of the employee automatically.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <description>The annual cost to the company for the employee.</description>
        <inlineHelpText>Enter the annual CTC for the employee.</inlineHelpText>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The city of the employee.</description>
        <inlineHelpText>Enter the city of the employee.</inlineHelpText>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to true if the employee is a current employee.</description>
        <inlineHelpText>Check the box true if the employee is a current employee.</inlineHelpText>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Holds the date of birth of the employee.</description>
        <inlineHelpText>Enter the date of birth of the employee.</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Holds the date when the employee joined the company.</description>
        <inlineHelpText>Enter the date when the employee joined the company.</inlineHelpText>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the department ID for the employee.</description>
        <inlineHelpText>Select the appropriate department ID for the employee.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Holds the educational qualification of the fresher employee.</description>
        <inlineHelpText>Enter the educational qualification of the fresher employee.</inlineHelpText>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Holds the first name of the employee.</description>
        <inlineHelpText>Enter the first name of the employee.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full name of the employee is automatically populated in this field.</description>
        <formula>First_Name__c  &amp; &quot; &quot; &amp; Last_Name__c</formula>
        <inlineHelpText>Full name of the employee is automatically populated in this field.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box if the employee is active.</description>
        <inlineHelpText>Check this box if the employee is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box if the employee is on notice period.</description>
        <inlineHelpText>Check this box if the employee is on notice period.</inlineHelpText>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Holds the last name of the employee.</description>
        <inlineHelpText>Enter the last name of the employee.</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <description>This date is automatically calculated based on resignation date.</description>
        <formula>Resignation_Date__c + 60</formula>
        <inlineHelpText>This date is automatically calculated based on resignation date.</inlineHelpText>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the manager ID for the employee.</description>
        <inlineHelpText>Select the appropriate manager ID for the employee.</inlineHelpText>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee_4__c.Role__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee_4__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Comapny_2__c</fullName>
        <description>Holds name of second most recent company.</description>
        <inlineHelpText>Enter name of second most recent company.</inlineHelpText>
        <label>Previous Comapny - 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Company_1__c</fullName>
        <description>Holds name of most recent company.</description>
        <inlineHelpText>Enter name of most recent company.</inlineHelpText>
        <label>Previous Company - 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Salary__c</fullName>
        <description>Holds salary in most recent company.</description>
        <inlineHelpText>Enter salary in most recent company.</inlineHelpText>
        <label>Previous Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <description>Holds the date of resignation of the employee.</description>
        <inlineHelpText>Enter the date of resignation of the employee.</inlineHelpText>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the role of the employee.</description>
        <inlineHelpText>Provide the role of the employee from the lookup.</inlineHelpText>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Holds the social security number.</description>
        <inlineHelpText>Enter the social security number of the employee.</inlineHelpText>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <description>Automatically calculates total salary credited to the employee till date.</description>
        <inlineHelpText>Automatically calculates total salary credited to the employee till date.</inlineHelpText>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Skills possessed by the employee.</description>
        <inlineHelpText>Select the skills possessed by the employee.</inlineHelpText>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Holds the state in which employee lives.</description>
        <inlineHelpText>Select the state in which employee lives.</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Red Flag: Inactive.
Yellow Flag: On notice period.
Green Flag: Active.</description>
        <formula>IF(
  AND(Is_Active__c == TRUE,Is_on_Notice_Period__c == FALSE),
  IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Employee is active.&quot; ) ,  
  IF( 
    AND(Is_Active__c == TRUE,Is_on_Notice_Period__c == TRUE), 
    IMAGE( &quot;/img/samples/flag_yellow.gif&quot;,&quot;Employee is currently on notice period.&quot;)  ,
    IF( 
      AND(Is_Active__c == FALSE,Is_on_Notice_Period__c == TRUE),  
      NULL,
      IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Employee is currently inactive.&quot;)
    ) 
  )
)</formula>
        <inlineHelpText>Red Flag: Inactive.
Yellow Flag: On notice period.
Green Flag: Active.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Holds the street on which the employee lives.</description>
        <inlineHelpText>Enter the street on which the employee lives.</inlineHelpText>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Experience__c</fullName>
        <description>Calculates the total experience for the experienced employee.</description>
        <formula>VALUE( TEXT(Years_of_Experience_1__c )) + VALUE (TEXT(Years_of_Experience_2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total experience for the experienced employee.</inlineHelpText>
        <label>Total Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Role__c</fullName>
        <description>Unique field for One-to-One relationship.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique field for One-to-One relationship.</inlineHelpText>
        <label>Unique Role</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Years_of_Experience_1__c</fullName>
        <description>Holds the experience in years in most recent company.</description>
        <inlineHelpText>Select the experience in years in most recent company.</inlineHelpText>
        <label>Years of Experience - 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience_2__c</fullName>
        <description>Holds the experience in years in most recent company.</description>
        <inlineHelpText>Select the experience in years in most recent company.</inlineHelpText>
        <label>Years of Experience - 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience_on_Salesforce__c</fullName>
        <label>Years of Experience on Salesforce</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Notice Period</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <description>Non-technical employees.</description>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>Technical employees.</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.ValidationSetting__c.Validations__c  == TRUE,
    TRUE,
    IF(AND(Age__c &lt; 21, Age__c &gt; 30),    
        TRUE,
        FALSE
    )
)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Please provide a valid Date of birth. Employee cannot be less than 18 years of Age.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Working_Day</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
OR(Date_of_Joining__c &gt;  Last_Working_Day__c, Resignation_Date__c &gt; Last_Working_Day__c), 
TRUE, 
FALSE)</errorConditionFormula>
        <errorMessage>Last working day cannot be before resignation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notice_Period_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
   AND(Is_Active__c == FALSE,Is_on_Notice_Period__c == TRUE), 
   TRUE, 
   FALSE
)</errorConditionFormula>
        <errorDisplayField>Is_Active__c</errorDisplayField>
        <errorMessage>The employee cannot be inactive in notice period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    Date_of_Joining__c  &gt;  Resignation_Date__c ,
   TRUE,
   FALSE)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Employee cannot resign before joining.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Date_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(Is_on_Notice_Period__c == TRUE, TEXT(Resignation_Date__c) == NULL),
   TRUE,
   FALSE
)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>You need to enter a resignation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(Is_on_Notice_Period__c == FALSE, TEXT(Resignation_Date__c) &lt;&gt; NULL),
   TRUE,
   FALSE
)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>The &quot;Is on Notice Period&quot; checkbox should be checked in order to enter resignation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( TEXT(SSN__c )) &lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>Invalid Value in SSN.</errorMessage>
    </validationRules>
</CustomObject>